rdy for content

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "license": "x",
     "author": "MalibuVBC",
     "contributors": [
-        "Brandon J Turner ("https://www.brandonjturner.com/")
+        "Brandon J Turner ('https://www.brandonjturner.com/')"
     ],
     "repository": {
         "type": "git",
