--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "title": "MalibuVBC",
     "name": "malibuvbc",
-    "url": "https://www.malibuvbc.com",
+    "url": "https://malibuvbc.com",
     "version": "5.0.11",
     "scripts": {
         "start": "node_modules/.bin/gulp watch"
