--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "homepage": "https://brandonjturner.github.io/malibuvbc/",
     "bugs": {
         "url": "https://brandonjturner.github.io/malibuvbc/",
-        "email": "mizunocamps@hotmail.com"
+        "email": "malibuvbc@gmail.com"
     },
     "license": "x",
     "author": "MalibuVBC",
