--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "stable": "^0.1.8"
     },
     "devDependencies": {
-        "browser-sync": "2.26.13",
+        "browser-sync": "^2.26.14",
         "del": "6.0.0",
         "gulp": "4.0.2",
         "gulp-autoprefixer": "7.0.1",
